# backend/routes/api.php
@@ -119,6 +119,7 @@ Route::group(['middleware' => ['jwt.auth']], function () {
             Route::get('ressources', [RessourceController::class, 'getRessourcesStats']);
             Route::get('ressources/count', [RessourceController::class, 'getRessourcesStatsCount']);
             Route::get('comments', [CommentController::class, 'getCommentsStats']);
+
         });
     });
 
@@ -153,6 +154,7 @@ Route::group(['middleware' => ['jwt.auth']], function () {
         Route::group(['prefix' => 'stats'], function () {
             Route::get('connections', [ConnectionController::class, 'getConnections']);
             Route::get('users', [UserController::class, 'getUsersInformation']);
+            Route::get('categories', [CategoryController::class, 'getCategoriesStatsCount']);
         });
     });
 
